fix: remove block when quickly scrolling on mobile

--- a/karita/src/index.css
+++ b/karita/src/index.css
@@ -12,3 +12,9 @@
 html {
   background-color: #fff4eb;
 }
+
+html,
+body {
+  height: 100%;
+  overscroll-behavior-y: none;
+}
